--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Taz at Tech</title>
-</head>
-<body>
+  <head>
+    <title>Smart Contract Programmer</title>
+  </head>
+  <body>
+    <h1>Hello Internet!</h1>
+    <p>This is a paragraph.</p>
 
-<h1>Hello Internet!</h1>
-<p>This is a paragraph.</p>
-
-<script></script>
-</body>
+    <script></script>
+  </body>
 </html>
